# ai4animationpy

./: .gitignore  README.md  pyproject.toml
Demos/BVHLoading/: Program.py
Demos/FBXLoading/: Program.py
Demos/GLBLoading/: Program.py
Demos/Locomotion/Biped/: LegIK.py  Program.py
Demos/Locomotion/Quadruped/: LegIK.py  Program.py
ai4animation/: Utility.py  __init__.py
ai4animation/Animation/: Motion.py
ai4animation/IK/: FABRIK.py
ai4animation/Import/: BVHImporter.py  BatchConverter.py
typings/: Definitions.pyi
typings/ai4animation/: __init__.pyi
