[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4animation"
version = "1.0.0"
description = "AI4Animation Python Framework - Neural network-based character animation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "onnxruntime-gpu==1.19.0",
    "raylib>=4.0.0",
    "numpy>=1.26.4,<2.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.1",
    "einops>=0.8.1",
    "pygltflib==1.16.5",
    "pyscreenrec==0.6",
    "tqdm",
    "pyyaml",
    "onnx==1.19.1",
]

[project.scripts]
convert = "ai4animation.Import.BatchConverter:main"

[tool.setuptools.packages.find]
include = ["ai4animation*"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "(platform_machine != 'x86_64' and platform_machine != 'AMD64') or sys_platform == 'darwin'" },
    { index = "pytorch-cu124", marker = "(platform_machine == 'x86_64' or platform_machine == 'AMD64') and (sys_platform == 'win32' or sys_platform == 'linux')" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "(platform_machine != 'x86_64' and platform_machine != 'AMD64') or sys_platform == 'darwin'" },
    { index = "pytorch-cu124", marker = "(platform_machine == 'x86_64' or platform_machine == 'AMD64') and (sys_platform == 'win32' or sys_platform == 'linux')" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "(platform_machine != 'x86_64' and platform_machine != 'AMD64') or sys_platform == 'darwin'" },
    { index = "pytorch-cu124", marker = "(platform_machine == 'x86_64' or platform_machine == 'AMD64') and (sys_platform == 'win32' or sys_platform == 'linux')" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
